@@ -8,6 +8,7 @@ CHANGE LOG
 
 = 1.3.4.3 =
 * Fixed: Problem with wrong units presentation on the reports page.
+* Fixed: Issues with BBPress forums on topics page when CoursePress is active.
 
 = 1.3.4.2 =
 * Fixed: Problem preview draft unit.
